--- a/src/14. Discrete Probability Exercise.ipynb
+++ b/src/14. Discrete Probability Exercise.ipynb
@@ -11,7 +11,7 @@
     "You take the dice, and you roll them. Then you take the sum of the two numbers. For example, if you roll the dice and get 5 and 4, then the sum would be 9. \n",
     "\n",
     "\n",
-    "![alt text](dice.png)\n",
+    "![alt text](images/dice.png)\n",
     "\n",
     "\n",
     "Now, you're curious to know what sum or sums are most likely to occur. So you decide to repeat your experiment two-thousand times and then analyze the results. \n",
@@ -173,7 +173,7 @@
     "\n",
     "And it also looks like the probability distribution is symmetrical with 6 and 8 having the same probability, 5 and 9, etc. Here is a visualization of the data:\n",
     "\n",
-    "![Visualization](visualization.png)\n"
+    "![Visualization](images/visualization.png)\n"
    ]
   },
   {
@@ -272,7 +272,7 @@
     "\n",
     "We have written code for you that will plot your results. Run the cell below to see the plot. If you've normalized the counts correctly, your output should look like this plot\n",
     "\n",
-    "![Probability Plot](plot.png)\n"
+    "![Probability Plot](images/plot.png)\n"
    ]
   },
   {
