Refactor and Clean up code

--- a/src/01_Variables.ipynb
+++ b/src/01_Variables.ipynb
@@ -16,22 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "is_executing": true
+    }
    },
-   "outputs": [],
    "source": [
-    "# Here we assign a value of 0.5 to the variable named p_heads\n",
-    "# and then use a print statement.\n",
     "p_heads = 0.75\n",
     "print(\"The probability of heads is\", p_heads)\n",
     "\n",
-    "# Here we assign a value to p_tails. This is done by taking the \n",
-    "# compli\n",
     "p_tails = 1.0 - p_heads\n",
     "print(\"The probability of tails is\", p_tails)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
