--- a/src/03_ForLoops.ipynb
+++ b/src/03_ForLoops.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# For Loops [demonstration]\n",
+    "# For Loops\n",
     "The code below demonstrates two ways of looping through the numbers 0,1,2,3,4,5"
    ]
   },
