Refactor and Clean up code

--- a/src/02_DataTypes.ipynb
+++ b/src/02_DataTypes.ipynb
@@ -211,10 +211,13 @@
    "execution_count": 15
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T22:24:07.109208Z",
+     "start_time": "2024-10-17T22:24:07.105351Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "#### **Boolean Operations:**\n",
     "\n",
@@ -240,7 +243,9 @@
     "\n",
     "# Less than or equal to\n",
     "is_less_or_equal = (5 <= 5)  # True"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -251,6 +256,29 @@
     "- **Numbers** can be integers, floats, or complex numbers with various arithmetic operations.\n",
     "- **Booleans** hold `True` or `False` values and are useful in control flow and logic."
    ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T22:24:09.910601Z",
+     "start_time": "2024-10-17T22:24:09.903449Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "type(result)\n",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   }
  ],
  "metadata": {
