--- a/src/03_ForLoops.ipynb
+++ b/src/03_ForLoops.ipynb
@@ -61,6 +61,33 @@
     "        product = left_num * right_num\n",
     "        print(left_num, \"x\", right_num, \"=\", product)"
    ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T22:26:59.581549Z",
+     "start_time": "2024-10-17T22:26:59.577627Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for num in range(5):\n",
+    "    print(num)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
