--- a/src/12_NumpyArraysForConditionalProbabilities.ipynb
+++ b/src/12_NumpyArraysForConditionalProbabilities.ipynb
@@ -16,17 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 5]\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T22:32:50.509608Z",
+     "start_time": "2024-10-17T22:32:50.497909Z"
     }
-   ],
+   },
    "source": [
     "# consider this 2d python grid (list of lists)\n",
     "grid = [\n",
@@ -37,22 +32,42 @@
     "]\n",
     "\n",
     "# It's easy to print, for example, row number 0:\n",
-    "print(grid[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+    "print(grid[0])\n",
+    "print(grid[0][1]), print(grid[1][1]), print(grid[2][1]), print(grid[3][1])"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 2 3]\n"
+      "[0, 1, 5]\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None, None, None)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T22:33:00.140352Z",
+     "start_time": "2024-10-17T22:32:59.542537Z"
+    }
+   },
    "source": [
     "# but how would you print COLUMN 0? In numpy, this is easy\n",
     "\n",
@@ -67,7 +82,17 @@
     "\n",
     "# The ':' usually means \"*all values*\n",
     "print(np_grid[:,0])"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3]\n"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
