--- a/src/16_ProbabilityUniformFunction.ipynb
+++ b/src/16_ProbabilityUniformFunction.ipynb
@@ -38,16 +38,8 @@
    "outputs": [],
    "source": [
     "def probability_range_improved(low_range, high_range, minimum, maximum):\n",
-    "\n",
-    "    # TODO: calulate and return the probability \n",
-    "    # even if low range is greater than high range.\n",
-    "    # Use the abs() function or if statements\n",
     "    \n",
-    "    probability = 0\n",
-    "    \n",
-    "    probability = abs(high_range - low_range) / (maximum - minimum) \n",
-    "    \n",
-    "    return probability"
+    "    return abs(high_range - low_range) / (maximum - minimum) "
    ]
   },
   {
@@ -93,57 +85,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T23:23:35.611305Z",
+     "start_time": "2024-10-17T23:23:35.607502Z"
+    }
+   },
    "source": [
     "def probability_range_improved(low_range, high_range, minimum, maximum):\n",
+    "    if not all(isinstance(arg, (int, float)) for arg in [low_range, high_range, minimum, maximum]):\n",
+    "        return None;\n",
     "\n",
-    "    # TODO: check if any of the inputs are strings.\n",
-    "    # hint: the python function isinstance() will be useful\n",
-    "    if ((isinstance(low_range,(float, int)))and(isinstance(high_range,(float, int)))\n",
-    "       and(isinstance(minimum,(float, int)))and(isinstance(maximum,(float, int)))):\n",
-    "        probability = 0\n",
-    "        probability = abs(high_range - low_range) / (maximum - minimum)\n",
-    "    else:\n",
-    "        # print a message to the user and return none\n",
-    "        print('Inputs should be numbers not string')\n",
-    "        return None\n",
-    "    \n",
-    "    return probability\n"
-   ]
+    "    return abs(high_range - low_range) / (maximum - minimum)"
+   ],
+   "outputs": [],
+   "execution_count": 23
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Run the next cell to check your results."
-   ]
+   "source": "Run the next cell to check your results."
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T23:23:37.608475Z",
+     "start_time": "2024-10-17T23:23:37.603644Z"
+    }
+   },
+   "source": [
+    "# Test1\n",
+    "\n",
+    "assert probability_range_improved('a', 0, -100, 500) is None\n",
+    "assert probability_range_improved(5, 'b', -100, 500) is None\n",
+    "assert \"{0:.2f}\".format(probability_range_improved(25, 700, 5, 800)) == '0.85'\n",
+    "assert \"{0:.2f}\".format(probability_range_improved(700, 25, 5, 800)) == '0.85'\n",
+    "\n",
+    "print('Well done!')"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inputs should be numbers not string\n",
-      "Inputs should be numbers not string\n",
       "Well done!\n"
      ]
     }
    ],
-   "source": [
-    "assert probability_range_improved('a', 0, -100, 500) == None\n",
-    "assert probability_range_improved(5, 'b', -100, 500) == None\n",
-    "\n",
-    "assert \"{0:.2f}\".format(probability_range_improved(25, 700, 5, 800)) == '0.85'\n",
-    "assert \"{0:.2f}\".format(probability_range_improved(700, 25, 5, 800)) == '0.85'\n",
-    "\n",
-    "print('Well done!')"
-   ]
+   "execution_count": 24
   },
   {
    "cell_type": "markdown",
@@ -158,36 +148,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T23:15:40.962543Z",
+     "start_time": "2024-10-17T23:15:40.960080Z"
+    }
+   },
    "source": [
     "def probability_range_improved(low_range, high_range, minimum, maximum):\n",
     "    \n",
-    "    # TODO check that low_range is between minimum and maximum\n",
-    "    if ((low_range < minimum) or (low_range > maximum)):\n",
-    "            # print a message to the user and return none\n",
-    "            print('Your low range value must be between minimum and maximum')\n",
-    "            return None\n",
-    "        \n",
-    "    if ((high_range < minimum) or (high_range > maximum)):\n",
-    "            # print a message to the user and return none\n",
-    "            print('The high range value must be between minimum and maximum')\n",
-    "            return None\n",
-    "    \n",
-    "    if ((isinstance(low_range,(float, int)))and(isinstance(high_range,(float, int)))\n",
-    "       and(isinstance(minimum,(float, int)))and(isinstance(maximum,(float, int)))):\n",
-    "         # TODO check that high_range is between min and max\n",
-    "        probability = 0\n",
-    "        probability = abs(high_range - low_range) / (maximum - minimum)\n",
-    "    else:\n",
-    "        # print a message to the user and return none\n",
-    "        print('Inputs should be numbers not string')\n",
+    "    if low_range < minimum or high_range > maximum or low_range > high_range or minimum >= maximum:\n",
     "        return None\n",
     "    \n",
-    "\n",
-    "    return probability\n"
-   ]
+    "    return abs(high_range - low_range) / (maximum - minimum)\n"
+   ],
+   "outputs": [],
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -198,28 +174,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T23:20:12.348292Z",
+     "start_time": "2024-10-17T23:20:12.343493Z"
+    }
+   },
+   "source": [
+    "# Test 2:\n",
+    "assert probability_range_improved(-100, 300, 100, 500) is None\n",
+    "assert probability_range_improved(105, 700, 100, 500) is None\n",
+    "assert \"{0:.2f}\".format(probability_range_improved(25, 700, 5, 800)) == '0.85'\n",
+    "assert \"{0:.2f}\".format(probability_range_improved(high_range=700,low_range= 25, minimum=5, maximum=800)) == '0.85'\n",
+    "assert \"{0:.2f}\".format(probability_range_improved(25, 71, 5, 800)) is not None\n",
+    "print('Awesome!')"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your low range value must be between minimum and maximum\n",
-      "The high range value must be between minimum and maximum\n",
       "Awesome!\n"
      ]
     }
    ],
-   "source": [
-    "assert probability_range_improved(-100, 300, 100, 500) == None\n",
-    "assert probability_range_improved(105, 700, 100, 500) == None\n",
-    "\n",
-    "assert \"{0:.2f}\".format(probability_range_improved(25, 700, 5, 800)) == '0.85'\n",
-    "assert \"{0:.2f}\".format(probability_range_improved(700, 25, 5, 800)) == '0.85'\n",
-    "\n",
-    "print('Awesome!')"
-   ]
+   "execution_count": 21
   },
   {
    "cell_type": "markdown",
@@ -232,39 +211,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T23:32:55.129749Z",
+     "start_time": "2024-10-17T23:32:55.123856Z"
+    }
+   },
    "source": [
     "def probability_range_improved(low_range, high_range, minimum, maximum):\n",
     "\n",
-    "    # TODO: check if any of the inputs are strings.\n",
-    "    # hint: the python function isinstance() will be useful\n",
-    "    if ((isinstance(low_range,(str)))or(isinstance(high_range,(str)))\n",
-    "       or(isinstance(minimum,(str)))or(isinstance(maximum,(str)))):\n",
-    "        # print a message to the user and return none\n",
-    "        print('Inputs should be numbers not string')\n",
-    "        return None\n",
-    "    \n",
-    "    # TODO check that low_range is between minimum and maximum\n",
-    "    if ((low_range < minimum) or (low_range > maximum)):\n",
-    "        # print a message to the user and return none\n",
-    "        print('Your low range value must be between minimum and maximum')\n",
-    "        return None\n",
-    "        \n",
-    "    # TODO check that high_range is between min and max\n",
-    "    if ((high_range < minimum) or (high_range > maximum)):\n",
-    "        # print a message to the user and return none\n",
-    "        print('The high range value must be between minimum and maximum')\n",
+    "    if not all(isinstance(arg, (int, float)) for arg in [low_range, high_range, minimum, maximum]):\n",
     "        return None\n",
     "\n",
-    "    # TODO: calulate and return the probability \n",
-    "    # even if low range is greater than high range\n",
-    "    probability = 0\n",
-    "    probability = abs(high_range - low_range) / (maximum - minimum)\n",
+    "    if any(arg<0 for arg in [low_range, high_range, minimum, maximum]):\n",
+    "        return None\n",
     "    \n",
-    "    return probability\n"
-   ]
+    "    if low_range < minimum or high_range > maximum or low_range > high_range or minimum >= maximum:\n",
+    "        return None\n",
+    "    \n",
+    "    return abs(high_range - low_range) / (maximum - minimum)\n"
+   ],
+   "outputs": [],
+   "execution_count": 27
   },
   {
    "cell_type": "markdown",
@@ -276,30 +244,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T23:33:50.826936Z",
+     "start_time": "2024-10-17T23:33:50.821488Z"
+    }
+   },
+   "source": [
+    "assert probability_range_improved('a', 0, -100, 500) is None\n",
+    "assert probability_range_improved(0, 'b', -100, 500) is None\n",
+    "assert probability_range_improved(-100, 300, 100, 500) is None\n",
+    "assert probability_range_improved(105, 700, 100, 500) is None\n",
+    "assert \"{0:.2f}\".format(probability_range_improved(25, 700, 5, 800)) == '0.85'\n",
+    "assert probability_range_improved(700, 25, 5, 800) is None\n",
+    "print('You got the results we were looking for!')"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inputs should be numbers not string\n",
-      "Inputs should be numbers not string\n",
-      "Your low range value must be between minimum and maximum\n",
-      "The high range value must be between minimum and maximum\n",
       "You got the results we were looking for!\n"
      ]
     }
    ],
-   "source": [
-    "assert probability_range_improved('a', 0, -100, 500) == None\n",
-    "assert probability_range_improved(0, 'b', -100, 500) == None\n",
-    "assert probability_range_improved(-100, 300, 100, 500) == None\n",
-    "assert probability_range_improved(105, 700, 100, 500) == None\n",
-    "assert \"{0:.2f}\".format(probability_range_improved(25, 700, 5, 800)) == '0.85'\n",
-    "assert \"{0:.2f}\".format(probability_range_improved(700, 25, 5, 800)) == '0.85'\n",
-    "print('You got the results we were looking for!')"
-   ]
+   "execution_count": 29
   }
  ],
  "metadata": {
