--- a/src/19_2DSelfDrivingCar.ipynb
+++ b/src/19_2DSelfDrivingCar.ipynb
@@ -37,9 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T23:43:08.477125Z",
+     "start_time": "2024-10-17T23:43:08.472472Z"
+    }
+   },
    "source": [
     "def initial_grid(rows, columns):\n",
     "\n",
@@ -67,7 +70,9 @@
     "    #        If you get stuck, see the demonstrations in the previous part of the lesson\n",
     "        \n",
     "    return grid"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -78,8 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T23:43:10.171824Z",
+     "start_time": "2024-10-17T23:43:10.164941Z"
+    }
+   },
+   "source": [
+    "assert initial_grid(5, 4) == [[0.05, 0.05, 0.05, 0.05],\n",
+    "                              [0.05, 0.05, 0.05, 0.05],\n",
+    "                              [0.05, 0.05, 0.05, 0.05],\n",
+    "                              [0.05, 0.05, 0.05, 0.05],\n",
+    "                              [0.05, 0.05, 0.05, 0.05]]\n",
+    "\n",
+    "assert initial_grid(2, 5) == [[0.1, 0.1, 0.1, 0.1, 0.1], \n",
+    "                              [0.1, 0.1, 0.1, 0.1, 0.1]]\n",
+    "\n",
+    "assert initial_grid(2, 2) == [[0.25, 0.25], \n",
+    "                              [0.25, 0.25]]\n",
+    "\n",
+    "print('Hooray!')"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -95,21 +119,7 @@
      ]
     }
    ],
-   "source": [
-    "assert initial_grid(5, 4) == [[0.05, 0.05, 0.05, 0.05],\n",
-    "                              [0.05, 0.05, 0.05, 0.05],\n",
-    "                              [0.05, 0.05, 0.05, 0.05],\n",
-    "                              [0.05, 0.05, 0.05, 0.05],\n",
-    "                              [0.05, 0.05, 0.05, 0.05]]\n",
-    "\n",
-    "assert initial_grid(2, 5) == [[0.1, 0.1, 0.1, 0.1, 0.1], \n",
-    "                              [0.1, 0.1, 0.1, 0.1, 0.1]]\n",
-    "\n",
-    "assert initial_grid(2, 2) == [[0.25, 0.25], \n",
-    "                              [0.25, 0.25]]\n",
-    "\n",
-    "print('Hooray!')"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
